# mugi-grep

./: .gitignore  CMakeLists.txt  README.md  anchorclickhandler.cpp  anchorclickhandler.h  appveyor.yml  build-msys2.bat  build.bat  build.pbat  changelog.json  config.json  deploy.bat  deploy.pbat  desktop.py  env-msys2.bat  env-msys2.pbat  env.bat  env.pbat  filecache.cpp  filecache.h  filereader.cpp  fix-includes.py  gen.js  html.cpp  html.h  icons.py  main.cpp  mugi-grep.pro  mugideploy.json  package-lock.json  regexp.cpp  regexp.h  regexp_.cpp  regexp_.h  regexpinput.h  regexppath.cpp  regexppath.h  release.py  rxcollector.cpp  rxcollector.h  (+16 more)
.github/workflows/: build.yml  deploy.yml
model/: editorsmodel.cpp
src/: anchorclickhandler.cpp  anchorclickhandler.h  boolmap.cpp  boolmap.h  coloredline.cpp  coloredline.h  coloredlinespan.cpp  coloredlinespan.h  colors.cpp  colors.h  completerhelper.cpp  completerhelper.h  completermodelmanager.cpp  completermodelmanager.h  countfilesmanager.cpp  countfilesmanager.h  countfilesparams.cpp  countfilesparams.h  displayoptions.cpp  displayoptions.h  editor.cpp  editor.h  editordetector.cpp  editordetector.h  editorsdialog.cpp  editorsdialog.h  editorsdialog.ui  fileio.cpp  fileio.h  filereader.cpp  filereader.h  fileutils.cpp  format.h  getlistingparams.cpp  getlistingparams.h  html.cpp  html.h  htmldivs.cpp  htmldivs.h  htmlstyle.cpp  (+68 more)
src/model/: checkablestringlistmodel.cpp  checklistmodel.cpp  checklistmodel.h  editorsmodel.cpp  editorsmodel.h
src/parse/: parsecpp.cpp  parsecpp.h  parsepython.cpp  parsepython.h
src/tablebuttons/: tablebuttons.cpp
src/widget/: displayoptionswidget.cpp  displayoptionswidget.h  displayoptionswidget.ui  elidedlabel.cpp  intlineedit.cpp  intlineedit.h  lineeditandcheckbox.cpp  lineeditandcheckbox.h  lineeditandcheckbox.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  navwidget.cpp  navwidget.h  navwidget.ui  oneormanyeditors.cpp  oneormanyeditors.h  oneormanyeditors.ui  regexpbaseinput.cpp  rxbaseinput.cpp  rxbaseinput.h  rxinput.cpp  rxinput.h  rxinput.ui  rxpathinput.cpp  rxpathinput.h  rxpathinput.ui  rxreplaceinput.cpp  rxreplaceinput.h  rxreplaceinput.ui  searchbrowser.cpp  searchbrowser.h  searchoptionswidget.cpp  searchoptionswidget.h  searchoptionswidget.ui  searchprogresswidget.cpp  searchprogresswidget.h  selectfilesdialog.cpp  selectfilesdialog.h  selectfilesdialog.ui  (+6 more)
struct/: editor.cpp  editor.h  searchdata.cpp  searchdata.h
utils/: bl.cpp  bl.h  fileutils.cpp  fileutils.h  isbinext.cpp  isbinext.h  json.h  sl.cpp
widget/: elidedlabel.cpp  elidedlabel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  regexpbaseinput.cpp  regexpbaseinput.h  regexpinput.cpp  regexppathinput.cpp  regexppathinput.h  regexpwidget.cpp  regexpwidget.h  rxinput.cpp  rxinput.h  rxinput.ui  rxpathinput.cpp  rxpathinput.h  searchbrowser.cpp  searchbrowser.h  searchoptionswidget.cpp  searchoptionswidget.h  searchoptionswidget.ui  searchprogresswidget.cpp  searchprogresswidget.h  searchprogresswidget.ui  selectfilesdialog.cpp  sessionwidget.cpp  sessionwidget.h  sessionwidget.ui
